--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.meta.xr.sdk.all": "83.0.4",
     "com.unity.ai.navigation": "2.0.9",
+    "com.unity.cloud.gltfast": "6.16.0",
     "com.unity.collab-proxy": "2.11.2",
     "com.unity.ide.rider": "3.0.38",
     "com.unity.ide.visualstudio": "2.0.26",
